tests/fixtures/fail/raw_alloc_unconstrained.sc
let main(): i32 = {
  let pointer = unsafe {
    raw_alloc(4, 4)
  }
  0
}
